<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoController</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    
    <string name="blank_msg">No data\n</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_add_update_album">AddUpdateAlbum</string>
    <string name="title_activity_album_list">AlbumList</string>
    <string name="title_activity_add_update_product">AddUpdateProduct</string>
    <string name="title_activity_product_list">ProductList</string>
    <string name="title_activity_product_show">ProductShow</string>

</resources>
